# Telegram-bot-smauto

./: Makefile  README.md  config.py  keyboard.py  main.py  pyproject.toml  sent_form.py  week.py
data/: check_auto.db  form.db  form_data.py  settings_form.py  users.db  users_viewing.db
