[tool.poetry]
name = ""
version = "0.1.0"
description = ""
authors = ["Alex Kompani <xhackerfinnx@outlook.com>"]
readme = "README.md"
packages = [{include = ""}]

[tool.poetry.dependencies]
python = "^3.10.11"
aiogram = "^2.23.1"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"